<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tab"
        android:icon="@drawable/tabs_icon_black_18"
        android:iconTint="?attr/colorOnPrimary"
        android:title="Tabs"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_back"
        android:title="@string/action_back"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_forward"
        android:title="@string/action_forward"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop"
        android:title="@string/action_stop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reload"
        android:title="@string/action_reload"
        app:showAsAction="never" />
</menu>
