<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tab"
        android:icon="@drawable/tabs_icon_black_18"
        android:iconTint="?attr/colorOnPrimary"
        android:title="Tabs"
        app:showAsAction="always" />

    <item
        android:orderInCategory="101"
        android:title="Options"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_more_vert_24">
        <menu>
            <item
                android:id="@+id/action_back"
                android:title="@string/action_back"
                android:icon="@drawable/ic_round_arrow_back_24"/>
            <item
                android:id="@+id/action_forward"
                android:title="@string/action_forward"
                android:icon="@drawable/ic_round_arrow_forward_24" />
            <item
                android:id="@+id/action_stop"
                android:title="@string/action_stop"
                android:icon="@drawable/baseline_close_black_24" />
            <item
                android:id="@+id/action_reload"
                android:title="@string/action_reload"
                android:icon="@drawable/ic_round_refresh_24" />
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_outline_settings_24"/>
        </menu>
    </item>
</menu>
