<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/settings_toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:translationY="-3dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <org.wpewebkit.tools.minibrowser.settings.clearbrowsingdata.ClearBrowsingDataItem
                    android:id="@+id/cookies_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:clearBrowsingDataItemIcon="@drawable/ic_baseline_cookie_24"
                    app:clearBrowsingDataItemTitle="@string/preferences_clear_browsing_data_cookies"
                    app:clearBrowsingDataItemSubtitle="@string/preferences_clear_browsing_data_cookies_subtitle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_clear_data"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_grey_30"
                    android:text="@string/preferences_clear_browsing_data_button"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
